# cprs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  generate_workspace_members.sh  index.md
.github/workflows/: verify.yml
.verify-helper/: config.toml  timestamps.remote.json
.verify-helper/docs/: index.md
algorithm/: Cargo.toml
algorithm/src/: lib.rs  mo.rs
data-structure/: Cargo.toml
data-structure/src/: heavy_light_decomposition.rs  li_chao_tree.rs  lib.rs  tree_query.rs
macros/: Cargo.toml
macros/src/: chminmax.rs  lib.rs
number-theory/: Cargo.toml
number-theory/src/: lib.rs  modint.rs
polynomial/: Cargo.toml
polynomial/src/: formal_power_series.rs  lib.rs  ntt.rs
src/: chminmax.rs  combination.rs  cumsum2d.rs  lib.rs  matrix.rs  modint.rs
tree/: Cargo.toml
tree/src/: centroid_decomposition.rs  lib.rs
verify/: Cargo.toml
verify/abc293_g/: Cargo.toml
verify/algebraic_new_test/: Cargo.toml
verify/algebraic_new_test/src/: main.rs
verify/aplusb/: Cargo.toml
verify/aplusb/src/: main.rs  main.rs.md
verify/assignment/: Cargo.toml
verify/bell_number/: Cargo.toml
verify/bitwise_and_convolution/: Cargo.toml
verify/bitwise_and_convolution/src/: main.rs  main.rs.md
verify/bitwise_or_convolution/: Cargo.toml
verify/bitwise_or_convolution/src/: main.rs.md
verify/composition_of_formal_power_series_large/: Cargo.toml
verify/convolution_mod/: Cargo.toml
verify/convolution_mod/src/: main.rs  main.rs.md
verify/deque_operate_all_composite/: Cargo.toml
verify/deque_operate_all_composite/src/: main.rs  main.rs.md
verify/discrete_logarithm_mod/: Cargo.toml
verify/discrete_logarithm_mod/src/: main.rs  main.rs.md
verify/division_of_division_of_polynomials/: Cargo.toml
verify/division_of_division_of_polynomials/src/: main.rs  main.rs.md
verify/division_of_formal_power_series/: Cargo.toml
verify/division_of_polynomials/: Cargo.toml
verify/double_ended_priority_queue/: Cargo.toml
verify/double_ended_priority_queue/src/: main.rs.md
verify/examples/: aplusb.rs.md  deque_operate_all_composite.rs.md  queue_operate_all_composite.rs.md  range_chmin_chmax_add_range_sum.rs  range_chmin_chmax_add_range_sum.rs.md  staticrmq.rs.md  vertex_add_path_sum.rs.md  vertex_add_subtree_sum.rs  vertex_add_subtree_sum.rs.md  vertex_set_path_composite.rs  vertex_set_path_composite.rs.md
verify/exp_of_formal_power_series/: Cargo.toml
verify/exp_of_formal_power_series_sparse/: Cargo.toml
verify/factorize/: Cargo.toml
verify/frequency_table_of_tree_distance/: Cargo.toml
verify/frequency_table_of_tree_distance/src/: main.rs  main.rs.md
verify/inv_of_formal_power_series/: Cargo.toml
verify/inv_of_formal_power_series_sparse/: Cargo.toml
verify/inv_of_formal_power_series_sparse/src/: main.rs
verify/inverse_matrix/: Cargo.toml
verify/inverse_matrix/src/: main.rs  main.rs.md
verify/jump_on_tree/: Cargo.toml
verify/kth_term_of_linearly_recurrent_sequence/: Cargo.toml
verify/kth_term_of_linearly_recurrent_sequence/src/: main.rs.md
verify/lca/: Cargo.toml
verify/lca/src/: main.rs  main.rs.md
verify/line_add_get_min/: Cargo.toml
verify/log_of_formal_power_series/: Cargo.toml
verify/log_of_formal_power_series_sparse/: Cargo.toml
verify/matrix_det/: Cargo.toml
verify/matrix_product/: Cargo.toml
verify/min_plus_convolution_convex_arbitrary/: Cargo.toml
verify/min_plus_convolution_convex_arbitrary/src/: main.rs  main.rs.md
verify/multipoint_evaluation/: Cargo.toml
verify/nim_product_64/: Cargo.toml
verify/number_of_substrings/: Cargo.toml
verify/number_of_substrings/src/: main.rs  main.rs.md
verify/ordered_set_binary_trie/: Cargo.toml
verify/ordered_set_binary_trie/src/: main.rs  main.rs.md
verify/partition_function/: Cargo.toml
verify/partition_function/src/: main.rs  main.rs.md
verify/persistent_unionfind/: Cargo.toml
verify/point_add_range_sum/: Cargo.toml
verify/point_add_range_sum/src/: main.rs  main.rs.md
verify/point_add_rectangle_sum/: Cargo.toml
verify/point_add_rectangle_sum/src/: main.rs.md
verify/point_add_rectangle_sum_2/: Cargo.toml
verify/point_add_rectangle_sum_2/src/: main.rs.md
verify/point_set_tree_path_composite_sum_fixed_root/: Cargo.toml
verify/pow_of_formal_power_series/: Cargo.toml
verify/pow_of_formal_power_series/src/: main.rs  main.rs.md
verify/pow_of_formal_power_series_sparse/: Cargo.toml
verify/primality_test/: Cargo.toml
verify/primarity_test/: Cargo.toml
verify/q_binomial_coefficient_prime_mod/: Cargo.toml
verify/q_binomial_coefficient_prime_mod/src/: main.rs.md
verify/queue_operate_all_composite/: Cargo.toml
verify/range_affine_point_get/: Cargo.toml
verify/range_affine_point_get/src/: main.rs.md
verify/range_affine_range_sum/: Cargo.toml
verify/range_affine_range_sum/src/: main.rs  main.rs.md
verify/range_chmin_chmax_add_range_sum/: Cargo.toml
verify/range_chmin_chmax_add_range_sum/src/: main.rs.md
verify/range_parallel_unionfind/: Cargo.toml
verify/range_parallel_unionfind/src/: main.rs.md
verify/rectangle_add_point_get/: Cargo.toml
verify/rectangle_add_point_get/src/: main.rs.md
verify/scc/: Cargo.toml
verify/segment_add_get_min/: Cargo.toml
verify/segment_add_get_min/src/: main.rs  main.rs.md
verify/segment_add_get_min_offline/: Cargo.toml
verify/shift_of_sampling_points_of_polynomial/: Cargo.toml
verify/shortest_path/: Cargo.toml
verify/sqrt_of_formal_power_series/: Cargo.toml
verify/sqrt_of_formal_power_series_sparse/: Cargo.toml
verify/src/: main.rs.md
verify/static_range_inversions_query/: Cargo.toml
verify/static_range_inversions_query_2/: Cargo.toml
verify/static_range_sum/: Cargo.toml
verify/static_rectangle_add_rectangle_sum/: Cargo.toml
verify/staticrmq/: Cargo.toml
verify/stirling_number_of_the_second_kind_fixed_k/: Cargo.toml
verify/subset_convolution/: Cargo.toml
verify/suffixarray/: Cargo.toml
verify/sum_of_floor_of_linear/: Cargo.toml
verify/tree_path_composite_sum/: Cargo.toml
verify/two_edge_connected_components/: Cargo.toml
verify/two_sat/: Cargo.toml
(+1496 files in other folders)
