[workspace]
members = [
    "crates/algebra/algebraic_structure",
    "crates/algebra/algebraic_traits",
    "crates/algebra/numeric_traits",
    "crates/algorithm/mo",
    "crates/combinatorics/binomial",
    "crates/convolution/bitwise_and_convolution",
    "crates/convolution/bitwise_or_convolution",
    "crates/data_structure/csr_array",
    "crates/data_structure/disjoint_sparse_table",
    "crates/data_structure/fenwick_tree/fenwick_tree",
    "crates/data_structure/foldable_deque",
    "crates/data_structure/segment_tree/dual_segment_tree",
    "crates/data_structure/segment_tree/lazy_segment_tree",
    "crates/data_structure/segment_tree/segment_tree",
    "crates/data_structure/union_find/union_find",
    "crates/graph/dijkstra",
    "crates/graph/graph",
    "crates/graph/strongly_connected_components",
    "crates/misc/into_half_open_range",
    "crates/number_theory/modint/barrett_reduction",
    "crates/number_theory/modint/dynamic_modint",
    "crates/number_theory/modint/dynamic_modint_64",
    "crates/number_theory/modint/modint",
    "crates/number_theory/modint/modint_mersenne",
    "crates/number_theory/modint/static_modint",
    "crates/number_theory/prime_factorization",
    "verify/library_checker/convolution/bitwise_and_convolution",
    "verify/library_checker/convolution/bitwise_or_convolution",
    "verify/library_checker/data_structure/deque_operate_all_composite",
    "verify/library_checker/data_structure/point_add_range_sum",
    "verify/library_checker/data_structure/point_set_range_composite",
    "verify/library_checker/data_structure/range_affine_point_get",
    "verify/library_checker/data_structure/range_affine_range_sum",
    "verify/library_checker/data_structure/static_range_frequency_mo",
    "verify/library_checker/data_structure/staticrmq_dst",
    "verify/library_checker/data_structure/unionfind",
    "verify/library_checker/data_structure/unionfind_with_potential",
    "verify/library_checker/enumerative_combinatorics/binomial_coefficient_prime_mod",
    "verify/library_checker/graph/scc",
    "verify/library_checker/graph/shortest_path",
    "verify/library_checker/number_theory/factorize",
    "verify/library_checker/number_theory/sqrt_mod",
]
