[workspace]
members = [
    "crates/algebra/algebraic_structure",
    "crates/algebra/algebraic_traits",
    "crates/algebra/numeric_traits",
    "crates/algorithm/mo",
    "crates/combinatorics/binomial",
    "crates/convolution/bitwise_and_convolution",
    "crates/convolution/bitwise_or_convolution",
    "crates/convolution/bitwise_xor_convolution",
    "crates/convolution/convolution",
    "crates/convolution/gcd_convolution",
    "crates/convolution/lcm_convolution",
    "crates/data_structure/csr_array",
    "crates/data_structure/disjoint_sparse_table",
    "crates/data_structure/fenwick_tree/fenwick_tree",
    "crates/data_structure/foldable_deque",
    "crates/data_structure/offline_dynamic_convex_hull_trick",
    "crates/data_structure/persistent_array",
    "crates/data_structure/segment_tree/dual_segment_tree",
    "crates/data_structure/segment_tree/lazy_segment_tree",
    "crates/data_structure/segment_tree/segment_tree",
    "crates/data_structure/union_find/persistent_union_find",
    "crates/data_structure/union_find/union_find",
    "crates/data_structure/wavelet_matrix",
    "crates/flow/max_flow",
    "crates/graph/dijkstra",
    "crates/graph/graph",
    "crates/graph/strongly_connected_components",
    "crates/linear_algebra/matrix",
    "crates/misc/coordinate_compression",
    "crates/misc/into_half_open_range",
    "crates/misc/simple_arena",
    "crates/number_theory/eratosthenes",
    "crates/number_theory/linear_sieve",
    "crates/number_theory/modint/barrett_reduction",
    "crates/number_theory/modint/dynamic_modint",
    "crates/number_theory/modint/dynamic_modint_64",
    "crates/number_theory/modint/modint",
    "crates/number_theory/modint/modint_mersenne",
    "crates/number_theory/modint/static_modint",
    "crates/number_theory/prime_factorization",
    "crates/number_theory/rational",
    "crates/polynomial/formal_power_series",
    "crates/tree/heavy_light_decomposition",
    "crates/tree/rerooting_tree_dp",
    "verify/library_checker/convolution/bitwise_and_convolution",
    "verify/library_checker/convolution/bitwise_or_convolution",
    "verify/library_checker/convolution/bitwise_xor_convolution",
    "verify/library_checker/convolution/convolution_mod",
    "verify/library_checker/convolution/convolution_mod_1000000007",
    "verify/library_checker/convolution/convolution_mod_2_64",
    "verify/library_checker/convolution/gcd_convolution",
    "verify/library_checker/convolution/lcm_convolution",
    "verify/library_checker/data_structure/deque_operate_all_composite",
    "verify/library_checker/data_structure/line_add_get_min",
    "verify/library_checker/data_structure/persistent_unionfind",
    "verify/library_checker/data_structure/point_add_range_sum",
    "verify/library_checker/data_structure/point_add_rectangle_sum",
    "verify/library_checker/data_structure/point_set_range_composite",
    "verify/library_checker/data_structure/range_affine_point_get",
    "verify/library_checker/data_structure/range_affine_range_sum",
    "verify/library_checker/data_structure/range_kth_smallest",
    "verify/library_checker/data_structure/rectangle_add_point_get",
    "verify/library_checker/data_structure/rectangle_sum",
    "verify/library_checker/data_structure/static_range_frequency",
    "verify/library_checker/data_structure/static_range_frequency_mo",
    "verify/library_checker/data_structure/staticrmq_dst",
    "verify/library_checker/data_structure/unionfind",
    "verify/library_checker/data_structure/unionfind_with_potential",
    "verify/library_checker/data_structure/unionfind_with_potential_non_commutative_group",
    "verify/library_checker/enumerative_combinatorics/binomial_coefficient_prime_mod",
    "verify/library_checker/graph/scc",
    "verify/library_checker/graph/shortest_path",
    "verify/library_checker/linear_algebra/inverse_matrix",
    "verify/library_checker/linear_algebra/matrix_det",
    "verify/library_checker/linear_algebra/matrix_product",
    "verify/library_checker/linear_algebra/matrix_rank",
    "verify/library_checker/linear_algebra/pow_of_matrix",
    "verify/library_checker/number_theory/enumerate_primes_era",
    "verify/library_checker/number_theory/enumerate_primes_ls",
    "verify/library_checker/number_theory/factorize",
    "verify/library_checker/number_theory/primality_test",
    "verify/library_checker/number_theory/sqrt_mod",
    "verify/library_checker/polynomial/exp_of_formal_power_series",
    "verify/library_checker/polynomial/exp_of_formal_power_series_not_ntt_friendly",
    "verify/library_checker/polynomial/inv_of_formal_power_series",
    "verify/library_checker/polynomial/inv_of_formal_power_series_not_ntt_friendly",
    "verify/library_checker/polynomial/log_of_formal_power_series",
    "verify/library_checker/polynomial/pow_of_formal_power_series",
    "verify/library_checker/polynomial/sqrt_of_formal_power_series",
    "verify/library_checker/sample/aplusb",
    "verify/library_checker/sample/many_aplusb",
    "verify/library_checker/tree/jump_on_tree",
    "verify/library_checker/tree/lca",
    "verify/library_checker/tree/tree_path_composite_sum",
    "verify/library_checker/tree/vertex_add_path_sum",
    "verify/library_checker/tree/vertex_add_subtree_sum",
    "verify/library_checker/tree/vertex_set_path_composite",
    "verify/stress_test/number_theory/comparing_rational",
    "verify/yukicoder/flow/yuki1479_maxflow",
    "verify/yukicoder/tree/yuki0901_aux",
]
