[package]
name = "bitwise_or_convolution"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
or-convolution = { path = "../../crates/convolution/or-convolution" }
modint = { path = "../../crates/number-theory/modint" }
itertools = "=0.9.0"
