[package]
name = "deque_operate_all_composite"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }

algebraic = { package = "algebraic", path = "../../crates/algebraic/algebraic" }
sliding-window-aggregation = { package = "sliding-window-aggregation", path = "../../crates/data-structure/sliding-window-aggregation" }
