[package]
name = "discrete_logarithm_mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.5.0", features = ["derive"] }
discrete-logarithm = { path = "../../crates/math/discrete-logarithm" }
modint = { path = "../../crates/number-theory/modint" }
