[package]
name = "double_ended_priority_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
interval-heap = { path = "../../crates/data-structure/interval-heap" }
