[package]
name = "frequency_table_of_tree_distance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
graph = { path = "../../crates/graph/graph" }
centroid-decomposition = { path = "../../crates/tree/centroid-decomposition" }
convolution-u64 = { path = "../../crates/convolution/convolution-u64" }
itertools = "=0.9.0"
