[package]
name = "kth_term_of_linearly_recurrent_sequence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modint = { path = "../../crates/number-theory/modint" }
formal-power-series = { path = "../../crates/polynomial/formal-power-series" }
bostan-mori = { path = "../../crates/polynomial/bostan-mori" }
proconio = { version = "=0.3.6", features = ["derive"] }
