[package]
name = "lca"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
heavy-light-decomposition = { path = "../../crates/data-structure/heavy-light-decomposition" }
graph = { path = "../../crates/graph/graph" }
