[package]
name = "min_plus_convolution_convex_arbitrary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
min-plus-convolution = { path = "../../crates/algorithm/min-plus-convolution" }
itertools = "=0.9.0"
