[package]
name = "number_of_substrings"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
suffix-array = { path = "../../crates/string/suffix-array" }
