[package]
name = "ordered_set_binary_trie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.5.0", features = ["derive"] }
binary-trie = { path = "../../crates/data-structure/binary-trie" }
