[package]
name = "partition_function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partition = { path = "../../crates/number-theory/partition" }
proconio = { version = "=0.3.6", features = ["derive"] }
