[package]
name = "point_add_rectangle_sum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
range-tree = { path = "../../crates/data-structure/range-tree" }
algebraic = { package = "algebraic", path = "../../crates/algebraic/algebraic" }
