[package]
name = "point_add_rectangle_sum_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
segment-tree-on-wavelet-matrix = { path = "../../crates/data-structure/segment-tree-on-wavelet-matrix" }
algebraic = { package = "algebraic", path = "../../crates/algebraic/algebraic" }
