[package]
name = "q_binomial_coefficient_prime_mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modint = { path = "../../crates/number-theory/modint" }
q-binomial = { path = "../../crates/number-theory/q-binomial" }
proconio = { version = "=0.3.6", features = ["derive"] }
