[package]
name = "range_affine_point_get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
algebraic = { package = "algebraic", path = "../../crates/algebraic/algebraic" }
dual-segment-tree = { path = "../../crates/data-structure/dual-segment-tree" }
modint = { path = "../../crates/number-theory/modint" }