[package]
name = "range_affine_range_sum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
algebraic = { package = "algebraic", path = "../../crates/algebraic/algebraic" }
lazy-segment-tree = { package = "lazy-segment-tree", path = "../../crates/data-structure/lazy-segment-tree" }
ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }
