[package]
name = "range_affine_range_sum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.5.0", features = ["derive"] }
algebraic_structure = { path = "../../crates/algebra/algebraic_structure" }
algebraic_traits = { path = "../../crates/algebra/algebraic_traits" }
lazy-segment-tree = { path = "../../crates/data-structure/lazy-segment-tree" }
modint = { path = "../../crates/number-theory/modint" }
