[package]
name = "range_chmin_chmax_add_range_sum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
segtree-beats = { package = "segtree-beats", path = "../../crates/data-structure/segtree-beats" }
