[package]
name = "range_parallel_unionfind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
modint = { path = "../../crates/number-theory/modint" }
range-union-find = { path = "../../crates/data-structure/range-union-find" }
