[package]
name = "rectangle_add_point_get"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
algebraic = { package = "algebraic", path = "../../crates/algebraic/algebraic" }
dual-range-tree = { path = "../../crates/data-structure/dual-range-tree" }
