[package]
name = "segment_add_get_min"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proconio = { version = "=0.3.6", features = ["derive"] }
li-chao-tree-dynamic = { path = "../../crates/data-structure/li-chao-tree-dynamic" }
